@@ -1,3 +1,8 @@
+2013-01-17  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55983
+	* gfortran.dg/class_55.f90: New.
+
 2013-01-16  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/55882
