@@ -1,3 +1,9 @@
+2013-01-17  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/55983
+	* class.c (find_typebound_proc_uop): Check for f2k_derived instead of
+	asserting it.
+
 2013-01-13  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/55072
